--- a/notebooks/retrieval.ipynb
+++ b/notebooks/retrieval.ipynb
@@ -11,25 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bb17dc4c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d03e11310754918b4d4942decefa962",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 4 files:   0%|          | 0/4 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# All imports\n",
     "import pandas as pd\n",
@@ -50,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9d0e7f97",
    "metadata": {},
    "outputs": [],
@@ -159,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "209e9bad",
    "metadata": {},
    "outputs": [],
@@ -169,153 +154,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2e94e375",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processed 1 embeddings\n",
-      "Processed 2 embeddings\n",
-      "Processed 3 embeddings\n",
-      "Processed 4 embeddings\n",
-      "Processed 5 embeddings\n",
-      "Processed 6 embeddings\n",
-      "Processed 7 embeddings\n",
-      "Processed 8 embeddings\n",
-      "Processed 9 embeddings\n",
-      "Processed 10 embeddings\n",
-      "Processed 11 embeddings\n",
-      "Processed 12 embeddings\n",
-      "Processed 13 embeddings\n",
-      "Processed 14 embeddings\n",
-      "Processed 15 embeddings\n",
-      "Processed 16 embeddings\n",
-      "Processed 17 embeddings\n",
-      "Processed 18 embeddings\n",
-      "Processed 19 embeddings\n",
-      "Processed 20 embeddings\n",
-      "Processed 21 embeddings\n",
-      "Processed 22 embeddings\n",
-      "Processed 23 embeddings\n",
-      "Processed 24 embeddings\n",
-      "Processed 25 embeddings\n",
-      "Processed 26 embeddings\n",
-      "Processed 27 embeddings\n",
-      "Processed 28 embeddings\n",
-      "Processed 29 embeddings\n",
-      "Processed 30 embeddings\n",
-      "Processed 31 embeddings\n",
-      "Processed 32 embeddings\n",
-      "Processed 33 embeddings\n",
-      "Processed 34 embeddings\n",
-      "Processed 35 embeddings\n",
-      "Processed 36 embeddings\n",
-      "Processed 37 embeddings\n",
-      "Processed 38 embeddings\n",
-      "Processed 39 embeddings\n",
-      "Processed 40 embeddings\n",
-      "Processed 41 embeddings\n",
-      "Processed 42 embeddings\n",
-      "Processed 43 embeddings\n",
-      "Processed 44 embeddings\n",
-      "Processed 45 embeddings\n",
-      "Processed 46 embeddings\n",
-      "Processed 47 embeddings\n",
-      "Processed 48 embeddings\n",
-      "Processed 49 embeddings\n",
-      "Processed 50 embeddings\n",
-      "Processed 51 embeddings\n",
-      "Processed 52 embeddings\n",
-      "Processed 53 embeddings\n",
-      "Processed 54 embeddings\n",
-      "Processed 55 embeddings\n",
-      "Processed 56 embeddings\n",
-      "Processed 57 embeddings\n",
-      "Processed 58 embeddings\n",
-      "Processed 59 embeddings\n",
-      "Processed 60 embeddings\n",
-      "Processed 61 embeddings\n",
-      "Processed 62 embeddings\n",
-      "Processed 63 embeddings\n",
-      "Processed 64 embeddings\n",
-      "Processed 65 embeddings\n",
-      "Processed 66 embeddings\n",
-      "Processed 67 embeddings\n",
-      "Processed 68 embeddings\n",
-      "Processed 69 embeddings\n",
-      "Processed 70 embeddings\n",
-      "Processed 71 embeddings\n",
-      "Processed 72 embeddings\n",
-      "Processed 73 embeddings\n",
-      "Processed 74 embeddings\n",
-      "Processed 75 embeddings\n",
-      "Processed 76 embeddings\n",
-      "Processed 77 embeddings\n",
-      "Processed 78 embeddings\n",
-      "Processed 79 embeddings\n",
-      "Processed 80 embeddings\n",
-      "Processed 81 embeddings\n",
-      "Processed 82 embeddings\n",
-      "Processed 83 embeddings\n",
-      "Processed 84 embeddings\n",
-      "Processed 85 embeddings\n",
-      "Processed 86 embeddings\n",
-      "Processed 87 embeddings\n",
-      "Processed 88 embeddings\n",
-      "Processed 89 embeddings\n",
-      "Processed 90 embeddings\n",
-      "Processed 91 embeddings\n",
-      "Processed 92 embeddings\n",
-      "Processed 93 embeddings\n",
-      "Processed 94 embeddings\n",
-      "Processed 95 embeddings\n",
-      "Processed 96 embeddings\n",
-      "Processed 97 embeddings\n",
-      "Processed 98 embeddings\n",
-      "Processed 99 embeddings\n",
-      "Processed 100 embeddings\n",
-      "Processed 101 embeddings\n",
-      "Processed 102 embeddings\n",
-      "Processed 103 embeddings\n",
-      "Processed 104 embeddings\n",
-      "Processed 105 embeddings\n",
-      "Processed 106 embeddings\n",
-      "Processed 107 embeddings\n",
-      "Processed 108 embeddings\n",
-      "Processed 109 embeddings\n",
-      "Processed 110 embeddings\n",
-      "Processed 111 embeddings\n",
-      "Processed 112 embeddings\n",
-      "Processed 113 embeddings\n",
-      "Processed 114 embeddings\n",
-      "Processed 115 embeddings\n",
-      "Processed 116 embeddings\n",
-      "Processed 117 embeddings\n",
-      "Processed 118 embeddings\n",
-      "Processed 119 embeddings\n",
-      "Processed 120 embeddings\n",
-      "Processed 121 embeddings\n",
-      "Processed 122 embeddings\n",
-      "Processed 123 embeddings\n",
-      "Processed 124 embeddings\n",
-      "Processed 125 embeddings\n",
-      "Processed 126 embeddings\n",
-      "Processed 127 embeddings\n",
-      "Processed 128 embeddings\n",
-      "Processed 129 embeddings\n",
-      "Processed 130 embeddings\n",
-      "Processed 131 embeddings\n",
-      "Processed 132 embeddings\n",
-      "Processed 133 embeddings\n",
-      "Processed 134 embeddings\n",
-      "Processed 135 embeddings\n",
-      "Processed 136 embeddings\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ensp_embeddings_map: dict[str, torch.Tensor] = {}\n",
     "num_embeddings = 0\n",
@@ -327,154 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ffb7303d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "136\n",
-      "ENSP00000252519.3 torch.Size([1152])\n",
-      "ENSP00000378426.2 torch.Size([1152])\n",
-      "ENSP00000478114.2 torch.Size([1152])\n",
-      "ENSP00000155840.2 torch.Size([1152])\n",
-      "ENSP00000262916.6 torch.Size([1152])\n",
-      "ENSP00000381803.3 torch.Size([1152])\n",
-      "ENSP00000229335.6 torch.Size([1152])\n",
-      "ENSP00000509238.1 torch.Size([1152])\n",
-      "ENSP00000370839.6 torch.Size([1152])\n",
-      "ENSP00000352035.2 torch.Size([1152])\n",
-      "ENSP00000315417.3 torch.Size([1152])\n",
-      "ENSP00000498217.1 torch.Size([1152])\n",
-      "ENSP00000368332.4 torch.Size([1152])\n",
-      "ENSP00000419199.1 torch.Size([1152])\n",
-      "ENSP00000284629.2 torch.Size([1152])\n",
-      "ENSP00000257861.3 torch.Size([1152])\n",
-      "ENSP00000358081.4 torch.Size([1152])\n",
-      "ENSP00000338814.5 torch.Size([1152])\n",
-      "ENSP00000494522.3 torch.Size([1152])\n",
-      "ENSP00000419081.2 torch.Size([1152])\n",
-      "ENSP00000380256.4 torch.Size([1152])\n",
-      "ENSP00000352264.5 torch.Size([1152])\n",
-      "ENSP00000392028.1 torch.Size([1152])\n",
-      "ENSP00000493738.1 torch.Size([1152])\n",
-      "ENSP00000311083.5 torch.Size([1152])\n",
-      "ENSP00000221996.5 torch.Size([1152])\n",
-      "ENSP00000225387.3 torch.Size([1152])\n",
-      "ENSP00000346805.3 torch.Size([1152])\n",
-      "ENSP00000497249.1 torch.Size([1152])\n",
-      "ENSP00000381273.2 torch.Size([1152])\n",
-      "ENSP00000302105.4 torch.Size([1152])\n",
-      "ENSP00000260988.4 torch.Size([1152])\n",
-      "ENSP00000496418.1 torch.Size([1152])\n",
-      "ENSP00000496652.1 torch.Size([1152])\n",
-      "ENSP00000312099.5 torch.Size([1152])\n",
-      "ENSP00000261726.6 torch.Size([1152])\n",
-      "ENSP00000353132.3 torch.Size([1152])\n",
-      "ENSP00000307197.4 torch.Size([1152])\n",
-      "ENSP00000366179.3 torch.Size([1152])\n",
-      "ENSP00000315659.4 torch.Size([1152])\n",
-      "ENSP00000419599.1 torch.Size([1152])\n",
-      "ENSP00000356253.5 torch.Size([1152])\n",
-      "ENSP00000467264.1 torch.Size([1152])\n",
-      "ENSP00000301838.5 torch.Size([1152])\n",
-      "ENSP00000386633.1 torch.Size([1152])\n",
-      "ENSP00000494562.1 torch.Size([1152])\n",
-      "ENSP00000318177.9 torch.Size([1152])\n",
-      "ENSP00000382948.3 torch.Size([1152])\n",
-      "ENSP00000399719.1 torch.Size([1152])\n",
-      "ENSP00000500409.1 torch.Size([1152])\n",
-      "ENSP00000238558.3 torch.Size([1152])\n",
-      "ENSP00000319118.2 torch.Size([1152])\n",
-      "ENSP00000340823.6 torch.Size([1152])\n",
-      "ENSP00000341214.5 torch.Size([1152])\n",
-      "ENSP00000261609.8 torch.Size([1152])\n",
-      "ENSP00000498190.1 torch.Size([1152])\n",
-      "ENSP00000336856.4 torch.Size([1152])\n",
-      "ENSP00000355140.5 torch.Size([1152])\n",
-      "ENSP00000415433.2 torch.Size([1152])\n",
-      "ENSP00000356846.4 torch.Size([1152])\n",
-      "ENSP00000364361.3 torch.Size([1152])\n",
-      "ENSP00000261537.6 torch.Size([1152])\n",
-      "ENSP00000309790.4 torch.Size([1152])\n",
-      "ENSP00000372170.4 torch.Size([1152])\n",
-      "ENSP00000239243.5 torch.Size([1152])\n",
-      "ENSP00000288235.4 torch.Size([1152])\n",
-      "ENSP00000341021.2 torch.Size([1152])\n",
-      "ENSP00000289473.4 torch.Size([1152])\n",
-      "ENSP00000264596.3 torch.Size([1152])\n",
-      "ENSP00000350815.3 torch.Size([1152])\n",
-      "ENSP00000278780.5 torch.Size([1152])\n",
-      "ENSP00000440945.1 torch.Size([1152])\n",
-      "ENSP00000305556.5 torch.Size([1152])\n",
-      "ENSP00000263666.4 torch.Size([1152])\n",
-      "ENSP00000362103.2 torch.Size([1152])\n",
-      "ENSP00000329170.5 torch.Size([1152])\n",
-      "ENSP00000355001.2 torch.Size([1152])\n",
-      "ENSP00000495996.1 torch.Size([1152])\n",
-      "ENSP00000366413.4 torch.Size([1152])\n",
-      "ENSP00000281321.3 torch.Size([1152])\n",
-      "ENSP00000495718.1 torch.Size([1152])\n",
-      "ENSP00000391681.2 torch.Size([1152])\n",
-      "ENSP00000406998.2 torch.Size([1152])\n",
-      "ENSP00000315379.6 torch.Size([1152])\n",
-      "ENSP00000432174.2 torch.Size([1152])\n",
-      "ENSP00000283195.6 torch.Size([1152])\n",
-      "ENSP00000262241.5 torch.Size([1152])\n",
-      "ENSP00000220751.4 torch.Size([1152])\n",
-      "ENSP00000273480.3 torch.Size([1152])\n",
-      "ENSP00000217086.4 torch.Size([1152])\n",
-      "ENSP00000356437.3 torch.Size([1152])\n",
-      "ENSP00000289292.7 torch.Size([1152])\n",
-      "ENSP00000494686.1 torch.Size([1152])\n",
-      "ENSP00000304502.6 torch.Size([1152])\n",
-      "ENSP00000260653.3 torch.Size([1152])\n",
-      "ENSP00000328596.5 torch.Size([1152])\n",
-      "ENSP00000254480.5 torch.Size([1152])\n",
-      "ENSP00000217381.2 torch.Size([1152])\n",
-      "ENSP00000322568.3 torch.Size([1152])\n",
-      "ENSP00000297316.4 torch.Size([1152])\n",
-      "ENSP00000341815.7 torch.Size([1152])\n",
-      "ENSP00000323588.1 torch.Size([1152])\n",
-      "ENSP00000359567.2 torch.Size([1152])\n",
-      "ENSP00000244745.1 torch.Size([1152])\n",
-      "ENSP00000495214.1 torch.Size([1152])\n",
-      "ENSP00000517670.1 torch.Size([1152])\n",
-      "ENSP00000372547.1 torch.Size([1152])\n",
-      "ENSP00000311257.4 torch.Size([1152])\n",
-      "ENSP00000357631.4 torch.Size([1152])\n",
-      "ENSP00000254942.3 torch.Size([1152])\n",
-      "ENSP00000361636.3 torch.Size([1152])\n",
-      "ENSP00000361162.5 torch.Size([1152])\n",
-      "ENSP00000299413.5 torch.Size([1152])\n",
-      "ENSP00000516963.1 torch.Size([1152])\n",
-      "ENSP00000347997.2 torch.Size([1152])\n",
-      "ENSP00000382507.2 torch.Size([1152])\n",
-      "ENSP00000239878.4 torch.Size([1152])\n",
-      "ENSP00000368801.3 torch.Size([1152])\n",
-      "ENSP00000265428.4 torch.Size([1152])\n",
-      "ENSP00000361626.3 torch.Size([1152])\n",
-      "ENSP00000499890.1 torch.Size([1152])\n",
-      "ENSP00000257940.2 torch.Size([1152])\n",
-      "ENSP00000520825.1 torch.Size([1152])\n",
-      "ENSP00000413418.2 torch.Size([1152])\n",
-      "ENSP00000422930.2 torch.Size([1152])\n",
-      "ENSP00000469647.2 torch.Size([1152])\n",
-      "ENSP00000426848.1 torch.Size([1152])\n",
-      "ENSP00000428821.1 torch.Size([1152])\n",
-      "ENSP00000365514.3 torch.Size([1152])\n",
-      "ENSP00000287538.5 torch.Size([1152])\n",
-      "ENSP00000372324.2 torch.Size([1152])\n",
-      "ENSP00000337034.4 torch.Size([1152])\n",
-      "ENSP00000420448.1 torch.Size([1152])\n",
-      "ENSP00000309606.2 torch.Size([1152])\n",
-      "ENSP00000366153.1 torch.Size([1152])\n",
-      "ENSP00000218099.2 torch.Size([1152])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(ensp_embeddings_map))\n",
     "for ensp in ensp_embeddings_map:\n",
@@ -483,12 +181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9887d21e",
    "metadata": {},
    "outputs": [],
    "source": [
     "utils.dict_to_pickle(ensp_embeddings_map, utils.ENSP_EMBEDDINGS_MAP_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d39dd9f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_embeddings: list[torch.Tensor] = []\n",
+    "with open(utils.TRAIN_ENSP_EMBEDDINGS_PATH, \"rb\") as f:\n",
+    "    while True:\n",
+    "        try:\n",
+    "            train_embeddings.extend(pickle.load(f))\n",
+    "        except EOFError:\n",
+    "            break\n",
+    "print(len(train_embeddings))"
    ]
   }
  ],
