--- a/feature_engineering/notebooks/retrieval.ipynb
+++ b/feature_engineering/notebooks/retrieval.ipynb
@@ -14,7 +14,18 @@
    "execution_count": null,
    "id": "bb17dc4c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.13.7' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: '/opt/homebrew/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# All imports\n",
     "import pandas as pd\n",
@@ -128,14 +139,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0591e7f0",
-   "metadata": {},
-   "source": [
-    "## Data retrieved from the MaveDB API"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8e8e1615",
    "metadata": {},
    "source": [
@@ -209,7 +212,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aasp",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
