--- a/training/main.ipynb
+++ b/training/main.ipynb
@@ -2,35 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "fef591e5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "Config file not found: c:\\Users\\ryanp\\Personal Projects\\mlm25_mavedb\\training\\src\\aasp\\data_handler\\src\\aasp\\data_handler\\config.yaml",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01maasp\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata_handler\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01maasp_dataset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m AASPDataset\n\u001b[32m      4\u001b[39m config_path = \u001b[33m\"\u001b[39m\u001b[33msrc/aasp/data_handler/config.yaml\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m cfg = \u001b[43mAASPConfig\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m handler = AASPDataHandler(cfg)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\ryanp\\Personal Projects\\mlm25_mavedb\\training\\src\\aasp\\data_handler\\data_handler.py:29\u001b[39m, in \u001b[36mAASPConfig.__init__\u001b[39m\u001b[34m(self, config_path)\u001b[39m\n\u001b[32m     27\u001b[39m p = Path(\u001b[34m__file__\u001b[39m).parent / config_path\n\u001b[32m     28\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m p.exists():\n\u001b[32m---> \u001b[39m\u001b[32m29\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mConfig file not found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mp\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     30\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(p, \u001b[33m\"\u001b[39m\u001b[33mr\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     31\u001b[39m     cfg = yaml.safe_load(f) \u001b[38;5;129;01mor\u001b[39;00m {}\n",
-      "\u001b[31mFileNotFoundError\u001b[39m: Config file not found: c:\\Users\\ryanp\\Personal Projects\\mlm25_mavedb\\training\\src\\aasp\\data_handler\\src\\aasp\\data_handler\\config.yaml"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.aasp.data_handler.data_handler import AASPConfig, AASPDataHandler\n",
     "from src.aasp.data_handler.aasp_dataset import AASPDataset\n",
     "\n",
-    "config_path = \"config.yaml\"\n",
+    "config_path = \"config.yaml\" # Change this to config file path as needed and revert pathing in AASPConfig in data_handler.py\n",
     "cfg = AASPConfig(config_path)\n",
     "handler = AASPDataHandler(cfg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2cfbf62b",
    "metadata": {},
    "outputs": [],
@@ -44,20 +31,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bcbf69d0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'p' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from: c:\\Users\\ryanp\\Personal Projects\\mlm25_mavedb\\data\\train\\combined_train_data.pkl\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'AASPConfig' object has no attribute 'parameters'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m records = \u001b[43mhandler\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload_pickle\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcfg\u001b[49m\u001b[43m.\u001b[49m\u001b[43mfile_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m val_frac = cfg.parameters.get(\u001b[33m\"\u001b[39m\u001b[33mval_frac\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m0.15\u001b[39m)\n\u001b[32m      3\u001b[39m val_size = \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(records) * val_frac)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\ryanp\\Personal Projects\\mlm25_mavedb\\training\\src\\aasp\\data_handler\\data_handler.py:76\u001b[39m, in \u001b[36mAASPDataHandler.load_pickle\u001b[39m\u001b[34m(self, path)\u001b[39m\n\u001b[32m     73\u001b[39m src = path \u001b[38;5;28;01mif\u001b[39;00m path \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;28mself\u001b[39m.config.file_path\n\u001b[32m     75\u001b[39m \u001b[38;5;66;03m# 2) load the pickle\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m76\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43mp\u001b[49m, \u001b[33m\"\u001b[39m\u001b[33mrb\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m     77\u001b[39m     obj = pickle.load(f)\n\u001b[32m     79\u001b[39m \u001b[38;5;66;03m# 3) normalize to list-of-dicts\u001b[39;00m\n\u001b[32m     80\u001b[39m \u001b[38;5;66;03m#    - case A: already list-of-dicts\u001b[39;00m\n",
-      "\u001b[31mNameError\u001b[39m: name 'p' is not defined"
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m records = handler.load_pickle(cfg.file_path)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m val_frac = \u001b[43mcfg\u001b[49m\u001b[43m.\u001b[49m\u001b[43mparameters\u001b[49m.get(\u001b[33m\"\u001b[39m\u001b[33mval_frac\u001b[39m\u001b[33m\"\u001b[39m, \u001b[32m0.15\u001b[39m)\n\u001b[32m      3\u001b[39m val_size = \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28mlen\u001b[39m(records) * val_frac)\n\u001b[32m      4\u001b[39m train_records = records[:\u001b[38;5;28mlen\u001b[39m(records) - val_size]\n",
+      "\u001b[31mAttributeError\u001b[39m: 'AASPConfig' object has no attribute 'parameters'"
      ]
     }
    ],
