Output file for test

--- a/training/src/aasp/experiment.ipynb
+++ b/training/src/aasp/experiment.ipynb
@@ -3649,7 +3649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "01e2b4f7",
    "metadata": {},
    "outputs": [
@@ -3671,6 +3671,8 @@
     }
    ],
    "source": [
+    "# Cell 9\n",
+    "\n",
     "# Model is already trained, just set to eval mode\n",
     "model.eval()\n",
     "\n",
@@ -3878,6 +3880,167 @@
     "print(\"-\" * 50)\n",
     "for idx in worst_indices:\n",
     "    print(f\"{idx:<8} {val_actuals[idx]:<12.4f} {val_predictions[idx]:<12.4f} {errors[idx]:<12.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f8cf3b5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading test data...\n",
+      "Test dataset shape: (118421, 10)\n",
+      "Test columns: ['accession', 'scoreset', 'ensp', 'pos', 'ref_long', 'alt_long', 'ref_embedding', 'alt_embedding', 'biotype', 'consequences']\n",
+      "\n",
+      "Generating predictions for 118421 test samples...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Predicting: 100%|██████████| 1851/1851 [00:07<00:00, 251.38it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✓ Predictions saved to ./output.csv\n",
+      "\n",
+      "Submission file preview:\n",
+      "              accession.score          \n",
+      "0   urn:mavedb:00000069-a-2#1 -0.500140\n",
+      "1   urn:mavedb:00000069-a-2#2 -0.498225\n",
+      "2   urn:mavedb:00000069-a-2#3 -0.479234\n",
+      "3   urn:mavedb:00000069-a-2#4 -0.479952\n",
+      "4   urn:mavedb:00000069-a-2#5 -0.487502\n",
+      "5   urn:mavedb:00000069-a-2#6 -0.452543\n",
+      "6   urn:mavedb:00000069-a-2#7 -0.428218\n",
+      "7   urn:mavedb:00000069-a-2#8 -0.415917\n",
+      "8   urn:mavedb:00000069-a-2#9 -0.418799\n",
+      "9  urn:mavedb:00000069-a-2#10 -0.422954\n",
+      "\n",
+      "Prediction statistics:\n",
+      "Min: -0.7372\n",
+      "Max: 5.6223\n",
+      "Mean: 0.5356\n",
+      "Median: -0.0570\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Code to generate file to submit to kaggle\n",
+    "\n",
+    "# data at ../../../data/test/combined_test_data.pkl\n",
+    "\n",
+    "# Load test data\n",
+    "print(\"Loading test data...\")\n",
+    "with open('../../../data/test/combined_test_data.pkl', 'rb') as f:\n",
+    "    test_data = pickle.load(f)\n",
+    "\n",
+    "# Convert to DataFrame if needed\n",
+    "if not isinstance(test_data, pd.DataFrame):\n",
+    "    test_df = pd.DataFrame(test_data)\n",
+    "else:\n",
+    "    test_df = test_data\n",
+    "\n",
+    "print(f\"Test dataset shape: {test_df.shape}\")\n",
+    "print(f\"Test columns: {test_df.columns.tolist()}\")\n",
+    "\n",
+    "# Create test dataset (no scores, so we'll pass dummy scores)\n",
+    "class TestProteinScoreDataset(Dataset):\n",
+    "    def __init__(self, dataframe, score_scaler):\n",
+    "        self.df = dataframe.reset_index(drop=True)\n",
+    "        self.score_scaler = score_scaler\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.df)\n",
+    "    \n",
+    "    def __getitem__(self, idx):\n",
+    "        row = self.df.iloc[idx]\n",
+    "        \n",
+    "        # Get embeddings\n",
+    "        ref_embedding = row['ref_embedding']\n",
+    "        alt_embedding = row['alt_embedding']\n",
+    "        \n",
+    "        # Ensure embeddings are torch tensors\n",
+    "        if not isinstance(ref_embedding, torch.Tensor):\n",
+    "            ref_embedding = torch.tensor(ref_embedding, dtype=torch.float32)\n",
+    "        else:\n",
+    "            ref_embedding = ref_embedding.float()\n",
+    "            \n",
+    "        if not isinstance(alt_embedding, torch.Tensor):\n",
+    "            alt_embedding = torch.tensor(alt_embedding, dtype=torch.float32)\n",
+    "        else:\n",
+    "            alt_embedding = alt_embedding.float()\n",
+    "        \n",
+    "        # Concatenate embeddings\n",
+    "        combined_embedding = torch.cat([ref_embedding, alt_embedding], dim=0)\n",
+    "        \n",
+    "        # Normalize embeddings (L2 normalization)\n",
+    "        norm = torch.norm(combined_embedding)\n",
+    "        if norm > 0:\n",
+    "            combined_embedding = combined_embedding / norm\n",
+    "        \n",
+    "        return combined_embedding, row['accession']\n",
+    "\n",
+    "# Create test dataset and dataloader\n",
+    "test_dataset = TestProteinScoreDataset(test_df, train_dataset.score_scaler)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=64, shuffle=False, num_workers=0)\n",
+    "\n",
+    "print(f\"\\nGenerating predictions for {len(test_df)} test samples...\")\n",
+    "\n",
+    "# Generate predictions\n",
+    "model.eval()\n",
+    "predictions_normalized = []\n",
+    "accessions = []\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for embeddings, batch_accessions in tqdm(test_loader, desc=\"Predicting\"):\n",
+    "        embeddings = embeddings.to(device)\n",
+    "        \n",
+    "        # Skip if NaN in embeddings\n",
+    "        if torch.isnan(embeddings).any() or torch.isinf(embeddings).any():\n",
+    "            # Use median prediction for problematic samples\n",
+    "            preds = torch.full((embeddings.size(0),), 0.5, device=device)\n",
+    "        else:\n",
+    "            preds = model(embeddings)\n",
+    "            \n",
+    "            # Replace any NaN predictions with median\n",
+    "            if torch.isnan(preds).any():\n",
+    "                preds = torch.where(torch.isnan(preds), torch.tensor(0.5, device=device), preds)\n",
+    "        \n",
+    "        predictions_normalized.extend(preds.cpu().numpy())\n",
+    "        accessions.extend(batch_accessions)\n",
+    "\n",
+    "# Convert to array and denormalize\n",
+    "predictions_normalized = np.array(predictions_normalized).reshape(-1, 1)\n",
+    "predictions_denormalized = train_dataset.score_scaler.inverse_transform(predictions_normalized).flatten()\n",
+    "\n",
+    "# Create submission dataframe with exact format from example\n",
+    "submission_df = pd.DataFrame({\n",
+    "    'accession.score': accessions,\n",
+    "    '': predictions_denormalized  # Second column with empty header name\n",
+    "})\n",
+    "\n",
+    "# Save to CSV\n",
+    "output_path = './output.csv'\n",
+    "submission_df.to_csv(output_path, index=False)\n",
+    "\n",
+    "print(f\"\\n✓ Predictions saved to {output_path}\")\n",
+    "print(f\"\\nSubmission file preview:\")\n",
+    "print(submission_df.head(10))\n",
+    "print(f\"\\nPrediction statistics:\")\n",
+    "print(f\"Min: {predictions_denormalized.min():.4f}\")\n",
+    "print(f\"Max: {predictions_denormalized.max():.4f}\")\n",
+    "print(f\"Mean: {predictions_denormalized.mean():.4f}\")\n",
+    "print(f\"Median: {np.median(predictions_denormalized):.4f}\")\n"
    ]
   }
  ],
